Fixed footer alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,6 +36,16 @@ footer {
 
 }
 
+#search-align {
+    text-align: center;
+
+}
+
+#search-list a {
+    text-decoration: none;
+
+}
+
 /* Navigation Bar Stylings */
 .navbar-brand {
     color: white;
